--- a/style.css
+++ b/style.css
@@ -1,321 +1,25 @@
-/* 
-WORKING DO NOT TOUCH!!!
-Frix63
-*/
-
-@import "upgradeStyles.css";
-@import "backgroundPictures.css";
-* {
-    -webkit-user-drag: none;
-    -khtml-user-drag: none;
-    -moz-user-drag: none;
-    -o-user-drag: none;
-    margin: 0;
-    padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.moneyText {
-    top: 0%;
-    left: 0%;
-    color: #000000;
-    border: solid 2px #000000;
-    box-shadow: inset 0 0 30px black, 0 0 20px 3px #000000;
-    background-color: rgb(255, 255, 255);
-    font-size: 24px;
-    position: absolute;
-    pointer-events: none;
-}
-
-.ComboText {
-    color: white;
-}
-
-.buttonText {
-    color: white;
-    -webkit-text-stroke: 1px black;
-    position: absolute;
-    text-align: right;
-    font-size: 5;
-    margin: 50px 00px;
-    right: 20px;
-    bottom: -30px;
-    z-index: 1;
-    pointer-events: none;
-}
-
-.prestigePower {
-    color: white;
-    -webkit-text-stroke: 1px black;
-    position: absolute;
-    text-align: center;
-    align-items: center;
-    transform: 180deg;
-    font-size: 15px;
-    margin: 0% 0%;
-    right: -20px;
-    bottom: 10px;
-    animation: txt 5s ease-in-out infinite normal;
-}
-
-.PrestigeL {
-    color: white;
-    -webkit-text-stroke: 1px black;
-    position: absolute;
-    text-align: center;
-    align-items: center;
-    transform: rotate(270deg);
-    font-size: 15px;
-    margin: 0% 0%;
-    z-index: 3;
-    right: -10px;
-    bottom: 180px;
-    background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-}
-
-@keyframes txt {
-    0% {
-        transform: rotate(-204deg);
-    }
-    25% {
-        transform: rotate(-211deg);
-    }
-    50% {
-        transform: rotate(-204deg);
-    }
-    75% {
-        transform: rotate(-211deg);
-    }
-    100% {
-        transform: rotate(-204deg);
-    }
-}
-
-.buttonStyle {
-    background-color: transparent;
-    color: transparent;
-    padding: 100%;
-    position: absolute;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 100%;
-    margin: 0 0;
-    cursor: pointer;
-}
-
-.errorMessage {
-    background-color: #ff0000;
-    color: white;
-    padding: 10px 20px;
-    top: 80px;
-    left: 11px;
-    position: absolute;
-    text-align: left;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 1.5vh;
-    margin: 0 0;
-    cursor: pointer;
-    z-index: 5;
-}
-
-.CPSDisplay {
-    margin-left: 5px;
-    color: white;
-    -webkit-text-stroke: 1px black;
-    top: 0px;
-    position: absolute;
-    text-align: left;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 8px;
-    pointer-events: none;
-}
-
-.AllTimeMoney {
-    margin-left: 5px;
-    color: white;
-    -webkit-text-stroke: 1px black;
-    top: 20px;
-    position: absolute;
-    text-align: left;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 8px;
-    pointer-events: none;
-}
-
-.RawCPS {
-    margin-left: 5px;
-    color: white;
-    -webkit-text-stroke: 1px black;
-    top: 40px;
-    position: absolute;
-    text-align: left;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 8px;
-    pointer-events: none;
-}
-
-.MPSC {
-    margin-left: 5px;
-    color: white;
-    -webkit-text-stroke: 1px black;
-    top: 60px;
-    position: absolute;
-    text-align: left;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 8px;
-    pointer-events: none;
-}
-
-.PStyle {
-    margin-left: 5px;
-    color: white;
-    -webkit-text-stroke: 1px black;
-    top: 80px;
-    position: absolute;
-    text-align: left;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 8px;
-    pointer-events: none;
-}
-
-.ATMBar {
-    position: absolute;
-    align-items: center;
-    justify-content: center;
-    transform: rotate(180deg);
-    right: 20px;
-    bottom: 60px;
-    height: 70vh;
-    width: 60px;
-    color: white;
-    font-size: 12px;
-    border: solid 1px white;
-    border-radius: 1vw;
-    box-shadow: 0 0 20px 3px #000000;
-    background: radial-gradient(ellipse farthest-corner at right bottom, #3e350e 0%, #2f2209 8%, #211908 30%, #231c0c 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #2e2e2e 0%, #2b2b1d 8%, #4d4224 25%, #211b0b 62.5%, #20190b 100%);
-    pointer-events: none;
-}
-
-.ATMBarProgress {
-    position: absolute;
-    align-items: center;
-    justify-content: center;
-    border: solid 1px white;
-    transform: rotate(180deg);
-    display: inline-flex;
-    width: 60px;
-    border-radius: 1vw;
-    background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
-}
-
-html,
-body {
-    margin: 0;
-    height: 100%;
-    overflow: hidden
-}
-
-
-/*  Upgrade box style */
-
-.upgradeBox {
-    min-width: 350px;
-    max-width: 350px;
-    top: 140px;
-    left: 10px;
-    border: solid 1px white;
-    position: absolute;
-    padding: 5px;
-    font: 1.2vw/36px sans-serif;
-    height: 80vh;
-    overflow-y: scroll;
-    box-shadow: inset 0 0 80px black, 0 0 20px 3px #000000;
-}
-
-
-/* Scrollbar styles */
-
-::-webkit-scrollbar {
-    width: 13px;
-}
-
-::-webkit-scrollbar-track {
-    background: none;
-    border-radius: 0px;
-    border: solid 1px #000000;
-}
-
-::-webkit-scrollbar-thumb {
-    border-radius: 0px;
-    background: radial-gradient(circle, rgb(156, 156, 156) 0%, rgb(189, 189, 189) 50%, rgb(114, 114, 114) 100%);
-    box-shadow: inset 0 0 5px black;
-    border: solid 1px white;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: radial-gradient(circle, rgb(132, 132, 132) 0%, rgb(165, 165, 165) 50%, rgb(90, 90, 90) 100%);
-    box-shadow: inset 0 0 5px black;
-    border: solid 1px white;
-}
-
-.Rays {
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    height: 50vh;
-    width: 50vw;
-    z-index: -1;
-    opacity: .15;
-    transform: scale(20%), translateY(-50%);
-    animation: rayspin 50s linear infinite;
-}
-
-@keyframes rayspin {
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(360deg);
-    }
-}
-
-.Rays2 {
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    height: 50vh;
-    width: 50vw;
-    z-index: -1;
-    opacity: .8;
-    transform: scale(20%), translateY(-50%);
-    animation: rayspin2 50s linear infinite;
-}
-
-@keyframes rayspin2 {
-    from {
-        -webkit-transform: rotate(360deg);
-    }
-    to {
-        -webkit-transform: rotate(0deg);
-    }
-}
-
-.InfoBox {
-    position: absolute;
-    right: 0%;
-    height: 150px;
-    width: 350px;
-    box-shadow: inset 0 0 80px black, 0 0 20px 3px #000000;
-    border: solid 1px white;
-}
+ body {
+     background-color: black;
+ }
+ 
+ .buttons {
+     width: auto;
+     height: auto;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     flex-direction: column;
+ }
+ 
+ .button {
+     margin: 5px 5px;
+     background-color: white;
+     color: black;
+     border: none;
+     height: 50px;
+     width: 500px;
+     text-align: center;
+     text-decoration: none;
+     display: inline-block;
+     font-size: 16px;
+ }
