--- a/frix63/style.css
+++ b/frix63/style.css
@@ -8,8 +8,6 @@
     
     body {
         background-color: #0D0D0D;
-        margin: 0;
-        padding: 0;
         background-image: linear-gradient(#0A2740 .1em, transparent .1em), linear-gradient(90deg, #0A2740 .1em, transparent .1em);
         background-size: 5em 5em;
         animation-name: backgroundgrid;
@@ -29,24 +27,6 @@
             background-position: 1000px 0;
             background-size: 6em 6em;
         }
-    }
-    
-    .text {
-        position: relative;
-        z-index: 1;
-        color: #63E4F2;
-        left: 20px;
-        font-size: 1rem;
-        padding: 20px 10px;
-        margin: 40px 0px;
-        float: left;
-        text-align: center;
-        transition: width 0.2s;
-        user-select: none;
-        -moz-user-select: none;
-        -webkit-user-select: none;
-        -ms-user-select: none;
-        white-space: nowrap;
     }
     
     .textleftbar {
@@ -155,7 +135,6 @@
         top: 0;
         left: 0;
         position: absolute;
-        border: 0px solid green;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -183,13 +162,53 @@
         background-color: #29A7D9;
     }
     
-    .homepageButtons {
-        width: 80vw;
-        bottom: 500px;
-        height: 80px;
+    .page {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        max-height: 2000px;
         overflow: hidden;
-        padding: 100vh 0;
-        margin: auto;
+        padding: 0 0;
+        top: 0px;
+        left: 0px;
+        overflow: hidden;
+    }
+    
+    .page1 {
+        border-radius: 50px;
+        width: 80vw;
+        height: auto;
+        margin: 90vh auto;
+        background-color: rgba(0, 0, 0, .5);
+        overflow: hidden;
+    }
+    
+    .text {
+        position: relative;
+        z-index: 1;
+        margin: 50px 50px;
+        color: #63E4F2;
+        display: block;
+        font-size: 1rem;
+        user-select: none;
+        text-align: justify;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+    }
+    
+    .pfp {
+        position: relative;
+        display: block;
+        margin: 50px 50px;
+        width: 300px;
+        height: 300px;
+        float: left;
+        border-radius: 50px;
+        user-select: none;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
     }
     
     .homebutton {
@@ -244,4 +263,24 @@
     
     #aboutme {
         margin: 18px auto;
+    }
+    
+    a:link {
+        text-decoration: none;
+        color: inherit;
+    }
+    
+    a:visited {
+        text-decoration: none;
+        color: inherit;
+    }
+    
+    a:hover {
+        text-decoration: none;
+        color: inherit;
+    }
+    
+    a:active {
+        text-decoration: none;
+        color: inherit;
     }
